correction in css file

--- a/style.scss
+++ b/style.scss
@@ -108,7 +108,7 @@ header{
     justify-content: space-between;
     align-items: stretch;
     margin:auto;
-    background-image: url(/images/bg-triangle.svg);
+    background-image: url(images/bg-triangle.svg);
     background-repeat: no-repeat;
     background-size: 55%;
     background-position-x: center;
