--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ header .scorebox .score {
       -ms-flex-align: stretch;
           align-items: stretch;
   margin: auto;
-  background-image: url(/images/bg-triangle.svg);
+  background-image: url(images/bg-triangle.svg);
   background-repeat: no-repeat;
   background-size: 55%;
   background-position-x: center;
