--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 }
 
 #ruleScreen {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -33,7 +33,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 99999;
   margin: 0;
   padding-top: 26.93333vw;
   padding-bottom: 17.86667vw;
@@ -105,6 +105,16 @@ header .scorebox .scorelabel {
 header .scorebox .score {
   font-size: 7.73333vw;
   color: #565469;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .choice-block {
@@ -192,9 +202,8 @@ header .scorebox .score {
 
 .second-screen {
   width: 85.6vw;
-  height: 56.8vw;
   margin: auto;
-  display: block;
+  display: none;
   margin-top: 94px;
   text-align: center;
   margin-bottom: 51px;
@@ -214,6 +223,7 @@ header .scorebox .score {
   position: relative;
   z-index: 999;
   margin-top: 0;
+  display: none;
 }
 
 .second-screen .result .left, .second-screen .result .right {
