--- a/style.scss
+++ b/style.scss
@@ -21,8 +21,11 @@ body{
 }
 
 #ruleScreen{
+
     width:100vw;
-    height:100vh;
+    // height:100vh;
+    // height:100%;
+    min-height: 100%;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -40,9 +43,11 @@ body{
     font-size: 24px;
 
     display:none;
+    // display:flex;
 
     .ilustration{
-        width:100%;
+        margin-bottom:30px;
+        width:60%;
         height:auto;
     }
 
